# sixeyes

./: .gitignore  CONTRIBUTING.md  JSON_MESSAGE_PROTOCOL.md  LICENSE  README.md  ROS2_HEARTBEAT_QUICKSTART.md  SixEyes Technical Reference.txt  VISUAL_ARCHITECTURE_GUIDE.md  ros2_heartbeat_node.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: code-quality.yml  platformio-build.yml  release.yml
docs/: README.md
docs/deployment/: FLASHING_AND_DEPLOYMENT.md
docs/firmware/: FIRMWARE_FEATURE_INVENTORY.md  IMPLEMENTATION_SUMMARY.md  TELEOPERATION_MODE_ARCHITECTURE.md  VISUAL_ARCHITECTURE_GUIDE.md
docs/hardware/: DUAL_CONTROLLER_PINOUT_MATRIX.md  HARDWARE_VALIDATION.md  WIRING_AND_ASSEMBLY.md
docs/ops/: CI_CD_PIPELINE.md
docs/protocols/: JSON_MESSAGE_PROTOCOL.md
docs/references/: FIRMWARE_SYSTEM_DATASHEET.md  SixEyes Technical Reference 2.txt  SixEyes Technical Reference.txt
docs/ros2/: ROS2_HEARTBEAT_INTEGRATION.md
docs/testing/: TESTING_AND_VALIDATION_GUIDE.md
sixeyes/: README.md
sixeyes/docs/: safety.md
sixeyes/docs/protocols/: uart_protocol.md
sixeyes/firmware/camera_esp32s3/: README.md  platformio.ini
sixeyes/firmware/camera_esp32s3/src/: main.cpp
sixeyes/firmware/follower_esp32/: platformio.ini
sixeyes/firmware/follower_esp32/docs/: README.md
sixeyes/firmware/leader_esp32/: platformio.ini
sixeyes/hardware_assets/3d_print_stl/: README.md
sixeyes/hardware_assets/pcb_schematic_gerber/: README.md
sixeyes/ros2_ws/src/camera_node/: package.xml  setup.cfg  setup.py
sixeyes/ros2_ws/src/camera_node/camera_node/: __init__.py  camera_node.py
sixeyes/ros2_ws/src/joint_state_node/: package.xml  setup.cfg  setup.py
sixeyes/ros2_ws/src/joint_state_node/joint_state_node/: __init__.py  joint_state_node.py
sixeyes/ros2_ws/src/safety_node/: package.xml  setup.cfg  setup.py
sixeyes/ros2_ws/src/safety_node/safety_node/: __init__.py  safety_node.py
sixeyes/ros2_ws/src/usb_bridge_node/: package.xml  setup.cfg  setup.py
sixeyes/ros2_ws/src/usb_bridge_node/resource/: usb_bridge_node
sixeyes/ros2_ws/src/usb_bridge_node/usb_bridge_node/: __init__.py  usb_bridge_node.py
sixeyes/ros2_ws/src/vla_inference_node/: package.xml  setup.cfg  setup.py
sixeyes/ros2_ws/src/vla_inference_node/vla_inference_node/: __init__.py  vla_inference_node.py
sixeyes/simulation/: README.md
sixeyes/tools/: operator_control.py  teleop_log_schema.py  teleoperation_bridge.py  validate_teleop_log.py
sixeyes/tools/testdata/: teleop_log_invalid.jsonl  teleop_log_valid.jsonl
(+50 files in other folders)
