<?xml version="1.0"?>
<package format="3">
  <name>camera_node</name>
  <version>0.0.1</version>
  <description>USB-UVC camera interface using image_transport.</description>
  <maintainer email="you@example.com">SixEyes</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
</package>
