<?xml version="1.0"?>
<package format="3">
  <name>joint_state_node</name>
  <version>0.0.1</version>
  <description>Aggregates joint state sources and publishes canonical /joint_states.</description>
  <maintainer email="you@example.com">SixEyes</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
