<?xml version="1.0"?>
<package format="3">
  <name>usb_bridge_node</name>
  <version>0.0.1</version>
  <description>Bridge for USB-CDC telemetry from follower to ROS2 topics.</description>
  <maintainer email="you@example.com">SixEyes</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
